2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlayerDBusObject.cs:
	* src/PlaylistWindow.cs:

	Move volume check to PlaylistWindow.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* plugins/DashboardPlugin.cs:

	Add null check.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Mark string from translation.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* Makefile.am:
	* PLUGINS:
	* TODO:
	* configure.in:
	* data/.cvsignore:
	* data/Makefile.am:
	* data/glade/PlaylistWindow.glade:
	* data/muine.pc.in:
	* plugins/.cvsignore:
	* plugins/DashboardPlugin.cs:
	* plugins/Makefile.am:
	* src/.cvsignore:
	R src/DashboardFrontend.cs:
	* src/Makefile.am:
	* src/MuineDBusService.cs:
	* src/PlayerDBusObject.cs:
	* src/PlayerInterface.cs:
	* src/PlaylistWindow.cs:
	* src/Plugin.cs:
	* src/PluginManager.cs:
	* src/Song.cs:
	* src/SongInterface.cs:
	* src/muine.in:

	Simple plugin support with a sample Dashboard plugin, and a
	D-Bus interface which is based on an old patch from Sergio Rubio.

2004-12-29  Jorn Baayen  <jbaayen@gnome.org>

	* README:

	Change "What is Muine" text, apparantly it confused people.

2004-12-29  Jorn Baayen  <jbaayen@gnome.org>

	* src/HandleView.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:

	Simplify playing song handling.

2004-12-29  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddSongWindow.cs:
	* src/CoverImage.cs:
	* src/FileUtils.cs:
	* src/PlaylistWindow.cs:
	* src/StringUtils.cs:

	Move URI conversion functions from StringUtils to FileUtils.
	
	* src/Song.cs:
	* src/SongDatabase.cs:

	Replace setting song.Dead to true with song.Kill ().

2004-12-29  Tamara Roberson  <foxxygirltamara@gmail.com>
            Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:
	* src/Database.cs:
	R src/DatabaseUtils.cs:
	
	Replaced DatabaseUtils with Database -- a more OO approach.
	
	* CoverDatabase.cs:
	* SongDatabase.cs:
		
	Renamed EncodeFunc to EncodeFunction.
	Renamed DecodeFunc to DecodeFunction.